[package]
name                   = "nethid"
version                = "0.0.1"
edition                = "2018"

authors                = ["Dmitry Ponyatov <dponyatov@gmail.com>"]
description            = "Virtual HID daemon (network remote control)"

[dependencies]
tracing                = "0.1"
tracing-subscriber     = "0.2"

sdl2 = { version = "0.34", features = ["image"] }
# features = ["ttf","gfx","mixer"]

[target.'cfg(unix)'.dependencies]
libc                   = "0.2"

[target.'cfg(windows)'.dependencies]
windows                = "0.19"
